--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
             Ou faça login com o Google
           </button>
 
-          <p>
-            Não tem uma conta?
-            <a href="">Cadastre-se</a>
-          </p>
+          <div class="footer">
+             <p>
+               Não tem uma conta?
+               <a href="">Cadastre-se</a>
+             </p>
+          </div>
       </form>
     </div>
   </section>
